@@ -1,6 +1,10 @@
 # ChangeLog for www-client/htmlview
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/htmlview/ChangeLog,v 1.9 2006/12/18 20:46:10 eroyf Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-client/htmlview/ChangeLog,v 1.10 2007/01/20 15:20:11 eroyf Exp $
+
+  20 Jan 2007; Alexander H. Færøy <eroyf@gentoo.org>
+  htmlview-3.0.0-r1.ebuild:
+  Stable on MIPS.
 
   18 Dec 2006; Alexander H. Færøy <eroyf@gentoo.org>
   htmlview-3.0.0-r1.ebuild:
